# roster

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migrations.rs
src/components/candidate/: AddCandidateDialog.tsx  CandidateForm.tsx  CandidatePrintView.tsx  CandidateRowPeek.tsx  HiringUtilities.tsx  LoECalculator.tsx  OfferLetterReviewSection.tsx  StageHistoryTimeline.tsx
src/components/dashboard/: CandidateCard.tsx  KanbanBoard.tsx  KanbanColumn.tsx
src/components/filters/: FilterBar.tsx
src/components/help/: KeyboardShortcutsHelp.tsx
src/components/layout/: AppShell.tsx  PageHeader.tsx  Sidebar.tsx
src/components/notes/: NoteEditor.tsx  NoteItem.tsx  NotesPanel.tsx
src/components/requirements/: AttachmentsPopover.tsx  RequirementChecklist.tsx
src/components/search/: CommandPalette.tsx
src/components/ui/: button.tsx  (+7 more)
src/hooks/: useAttachments.ts  useCandidateRequirements.ts  useCandidates.ts  useDepartments.ts  useNotes.ts  useOfferLetterReview.ts  usePeekData.ts  useRecruiters.ts  useRequirementTypes.ts  useRoles.ts  useStages.ts  useTemplates.ts
src/lib/: backup.ts  db.ts  format.ts  queries.ts  storage.ts  types.ts  utils.ts
src/routes/: CandidateDetail.tsx  CandidateList.tsx  Dashboard.tsx  Reports.tsx  Settings.tsx
src/stores/: filter-store.ts  toast-store.ts  ui-store.ts
src/styles/: globals.css
(+9 files in other folders)
