[package]
name = "hiring-tracker"
version = "0.1.0"
description = "Local-first HR hiring pipeline tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "hiring_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
